--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero-content">
                 <h1>Victor Desini</h1>
                 <h2>supino</h2>
-                <p class="tagline">supino com 5g</p>
+                <p class="tagline">100kg</p>
                 <a href="#about" class="cta-button">Saiba mais</a>
             </div>
         </section>
@@ -49,7 +49,7 @@
                         <div class="circle-frame"></div>
                     </div>
                     <div class="about-texts">
-                        <p class="bio-text">Sua bio deve vir aqui, escreva algumas palavras bonitas sobre si. O que gosta de fazer, o que gosta de comer e o que gosta de jogar/ler/assistir.</p>
+                        <p class="bio-text">Eu gosto de treinar e ir pra igreja</p>/supino.</p>
                     </div>
                     <div class="skills-grid"></div>
                 </div>
